--- a/pom.xml
+++ b/pom.xml
@@ -130,6 +130,27 @@
 			<version>1.18.30</version>
 			<optional>true</optional>
 		</dependency>
+
+
+		<!-- authentication -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-test</artifactId>
+			<scope>test</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>com.auth0</groupId>
+			<artifactId>java-jwt</artifactId>
+			<version>4.2.1</version>
+		</dependency>
+
+
 	</dependencies>
 
 	<build>
