--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,4 +23,5 @@ spring.flyway.password=${DB_PASSWORD}
 spring.flyway.baseline-on-migrate=true
 spring.flyway.locations=classpath:db/migration
 
+api.security.token.secret=${JWT_SECRET:12345678}
 
