--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,6 +16,9 @@ spring.datasource.password=${DB_PASSWORD}
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=validate
 
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
 ## Spring Flyway Config ##
 spring.flyway.url=jdbc:mysql://${DB_SERVER}:${DB_PORT}/${DB_NAME}
 spring.flyway.user=${DB_USER}
@@ -24,4 +27,6 @@ spring.flyway.baseline-on-migrate=true
 spring.flyway.locations=classpath:db/migration
 
 api.security.token.secret=${JWT_SECRET:12345678}
+
+
 
