--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,6 +6,7 @@ spring.config.import=optional:file:.env[.properties]
 server.port=${APP_PORT:8080}
 
 ## Swagger Config ##
+springdoc.swagger-ui.enabled=true
 springdoc.swagger-ui.operationsSorter=method
 springdoc.swagger-ui.tagsSorter=alpha
 
@@ -13,11 +14,7 @@ springdoc.swagger-ui.tagsSorter=alpha
 spring.datasource.url=jdbc:mysql://${DB_SERVER}:${DB_PORT}/${DB_NAME}
 spring.datasource.username=${DB_USER}
 spring.datasource.password=${DB_PASSWORD}
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
-spring.jpa.hibernate.ddl-auto=validate
-
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.hibernate.ddl-auto=update
 
 ## Spring Flyway Config ##
 spring.flyway.url=jdbc:mysql://${DB_SERVER}:${DB_PORT}/${DB_NAME}
