--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,6 +23,7 @@ spring.flyway.password=${DB_PASSWORD}
 spring.flyway.baseline-on-migrate=true
 spring.flyway.locations=classpath:db/migration
 
+## Spring Security Config ##
 api.security.token.secret=${JWT_SECRET:12345678}
 
 # Show details of health endpoint
