Melhorias no projeto

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,7 @@ spring.application.name=timesheet
 ## Environment config ##
 spring.config.import=optional:file:.env[.properties]
 server.port=${APP_PORT:8080}
+spring.jpa.properties.hibernate.jdbc.time_zone=${TIME_ZONE}
 
 ## Swagger Config ##
 springdoc.swagger-ui.enabled=true
