implementação do relatório de ponto com envio por e-mail.

--- a/.env
+++ b/.env
@@ -6,4 +6,5 @@ DB_USER=hackathon
 DB_PASSWORD=grupo56
 DB_ROOT_PASSWORD=grupo56
 JWT_SECRET=12345678
+TOKEN_EXPIRATION_MINUTES=60
 TIME_ZONE=America/Sao_Paulo
