--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,6 +25,17 @@ spring.flyway.locations=classpath:db/migration
 
 ## Spring Security Config ##
 api.security.token.secret=${JWT_SECRET:12345678}
+api.security.token.expirationMinutes=${TOKEN_EXPIRATION_MINUTES:5}
 
 # Show details of health endpoint
 management.endpoint.health.show-details=always
+
+
+#email config
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=wilianfiap@gmail.com
+spring.mail.password=cczi ddwy seen kygq
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
