Melhorias no envio de espelho de ponto

--- a/.env
+++ b/.env
@@ -8,3 +8,7 @@ DB_ROOT_PASSWORD=grupo56
 JWT_SECRET=12345678
 TOKEN_EXPIRATION_MINUTES=60
 TIME_ZONE=America/Sao_Paulo
+SENDER_MAIL=wilianfiap@gmail.com
+SENDER_MAIL_PASSWORD=cczi ddwy seen kygq
+MAIL_HOST=smtp.gmail.com
+MAIL_PORT=587
