--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -27,15 +27,13 @@ spring.flyway.locations=classpath:db/migration
 api.security.token.secret=${JWT_SECRET:12345678}
 api.security.token.expirationMinutes=${TOKEN_EXPIRATION_MINUTES:5}
 
-# Show details of health endpoint
+## Show details of health endpoint ##
 management.endpoint.health.show-details=always
 
-
-#email config
-
-spring.mail.host=smtp.gmail.com
-spring.mail.port=587
-spring.mail.username=wilianfiap@gmail.com
-spring.mail.password=cczi ddwy seen kygq
+## Spring Mail Config ##
+spring.mail.host=${MAIL_HOST}
+spring.mail.port=${MAIL_PORT}
+spring.mail.username=${SENDER_MAIL}
+spring.mail.password=${SENDER_MAIL_PASSWORD}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
