--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 ## App Config ##
 spring.application.name=timesheet
 
-## Environment config ##
+## Environment Config ##
 spring.config.import=optional:file:.env[.properties]
 server.port=${APP_PORT:8080}
 spring.jackson.date-format=yyyy-MM-dd'T'HH:mm:ss
@@ -29,9 +29,6 @@ spring.flyway.locations=classpath:db/migration
 api.security.token.secret=${JWT_SECRET:12345678}
 api.security.token.expirationMinutes=${TOKEN_EXPIRATION_MINUTES:5}
 
-## Show details of health endpoint ##
-management.endpoint.health.show-details=always
-
 ## Spring Mail Config ##
 spring.mail.host=${MAIL_HOST}
 spring.mail.port=${MAIL_PORT}
@@ -39,3 +36,6 @@ spring.mail.username=${SENDER_MAIL}
 spring.mail.password=${SENDER_MAIL_PASSWORD}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+
+## Show Details of Health Endpoint ##
+management.endpoint.health.show-details=always
