--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,6 +18,7 @@ services:
       - SENDER_MAIL_PASSWORD=cczi ddwy seen kygq
       - MAIL_HOST=smtp.gmail.com
       - MAIL_PORT=587
+      - TZ=America/Sao_Paulo
     ports:
       - "8080:8080"
     networks:
